Hadoop MapReduce Change Log

Release 2.7.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-5124. AM lacks flow control for task events. (Peter Bacsko via
    jlowe)

Release 2.7.5 - 2017-12-14

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-6937. Backport MAPREDUCE-6870 to branch-2 while preserving
    compatibility. (Peter Bacsko via Haibo Chen)

    MAPREDUCE-6975. Logging task counters. (Prabhu Joseph via Naganarasimha)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6931. Remove TestDFSIO "Total Throughput" calculation.
    (Dennis Huo via shv)

    MAPREDUCE-6750. Fix TestHSAdminServer#testRefreshSuperUserGroups
    (Kihwal Lee via Varun Saxena)

    MAPREDUCE-6957. shuffle hangs after a node manager connection timeout.
    (Jooseong Kim via jlowe)

    MAPREDUCE-6165. [JDK8] TestCombineFileInputFormat failed on JDK8.
    Contributed by Akira AJISAKA.

Release 2.7.4 - 2017-08-04

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6304. Specifying node labels when submitting MR jobs.
    (Naganarasimha G R. Backport by Inigo Goiri)

  IMPROVEMENTS

    MAPREDUCE-6741. Add MR support to redact job conf properties. (Haibo Chen
    via jlowe)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6744. Increase timeout on TestDFSIO tests (Eric Badger via
    jlowe)

    MAPREDUCE-6768. TestRecovery.testSpeculative failed with NPE (Haibo Chen
    via jlowe)

    MAPREDUCE-4784. TestRecovery occasionally fails (Haibo Chen via jlowe)

    MAPREDUCE-6771. RMContainerAllocator sends container diagnostics event
    after corresponding completion event (Haibo Chen via jlowe)

    MAPREDUCE-6763. Shuffle server listen queue is too small.
    (Jason Lowe via Varun Saxena)

    MAPREDUCE-6724. Single shuffle to memory must not exceed
    Integer#MAX_VALUE. (Haibo Chen via jlowe)

    MAPREDUCE-6873. MR Job Submission Fails if MR framework application path
    not on defaultFS. (xkrogen via zhz)
