@@ -15,6 +15,9 @@ Release 2.7.6 - UNRELEASED
     MAPREDUCE-5124. AM lacks flow control for task events. (Peter Bacsko via
     jlowe)
 
+    MAPREDUCE-7028. Concurrent task progress updates causing NPE in
+    Application Master. (Gergo Repas via jlowe)
+
 Release 2.7.5 - 2017-12-14
 
   INCOMPATIBLE CHANGES
